fixed image layout issues in section 2

--- a/main.scss
+++ b/main.scss
@@ -182,16 +182,19 @@ body {
 			padding: .375rem .75rem;
 			font-size: 1rem;
 			line-height: 1.5;
-			border-radius: .25rem;
+			border-radius: 25.25rem;
 			transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
 			transition-property: color, background-color, border-color, box-shadow;
 			transition-duration: 0.15s, 0.15s, 0.15s, 0.15s;
 			transition-timing-function: ease-in-out, ease-in-out, ease-in-out, ease-in-out;
+			transition: all 0.5s ease-in-out;
 			transition-delay: 0s, 0s, 0s, 0s;
 
 			&:hover{
 					color: black;
 					background-color: white;
+					border: 3px solid #ffc312;
+    				border-radius: 29px;
 
 			}
 		}
@@ -227,6 +230,7 @@ body {
 				display: flex;
 				flex-direction: column;
 				justify-content: center;
+				// align-items: center;
 				box-shadow: 6px 6px 6px 6px #dfbd56;
 
 	
@@ -234,20 +238,22 @@ body {
 				{
 					display: flex;
 					flex-direction: column;
-					justify-content: space-evenly;
+					justify-content: flex-start;
 					align-items: center;
 					// background-color: #000000;
 
-					height: 50vh;
+					height: 55vh;
 
 					padding: 2vh;
+					margin-top: -5vh;
 	
 					.s2_slider_image
 					{
 						img{
-							min-width: 15vh;
-							min-height: 15vh;
-							height: 29vh;
+							// min-width: 15vh;
+							// min-height: 15vh;
+							height: 34vh;
+							width:18vw;
 						}
 
 
@@ -278,6 +284,7 @@ body {
 					{
 						// padding-left:4vh;
 						// background-color: #333333;
+						width:25	vw;
 						p {
 							font-size: 1em;
 							font-family: 'Quicksand', sans-serif;
